<resources>
    <string name="app_name">درصدگیر کنکور</string>

    <string name="questions_number_colon">تعداد سوالات:</string>
    <string name="right_answers_number_colon">تعداد پاسخ صحیح:</string>
    <string name="wrong_answers_number_colon">تعداد پاسخ غلط:</string>
    <string name="calculate_points">محاسبه‌ی نمره</string>
    <string name="main_percent_colon">درصد اصلی:</string>
    <string name="percent_without_wrongs_colon">اگر غلطی نداشتید:</string>
    <string name="percent_if_wrongs_was_right_colon">اگر تست‌های غلط درست بودند:</string>

    <string name="exams_history">تاریخچه آزمون‌ها</string>
    <string name="save_exam">ذخیره آزمون</string>

    <string name="please_enter_exam_name">لطفا نام آزمون‌را وارد کنید!</string>
    <string name="saved_in_exams_history">در تاریخچه‌ی آزمون‌ها ذخیره شد.</string>
    <string name="exam_name">نام آزمون</string>
    <string name="cancel">لغو</string>

    <string name="got_it">فهمیدم</string>

    <string name="exit">خروج</string>
    <string name="exit_message">می‌خوای بری؟</string>
    <string name="yeah">آره</string>
    <string name="no">نه</string>
    <string name="rate">نظر در کافه‌بازار</string>
    <string name="please_install_cafebazaar">لطفا کافه‌بازار را نصب کنید!</string>
</resources>
