<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:padding="@dimen/standard_margin">

    <ir.proglovving.cfviews.CfEditText
        android:id="@+id/exam_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exam_name"
        android:layout_margin="@dimen/standard_margin"
        android:background="@drawable/selector_input_dialog_edit_text"
        android:padding="@dimen/standard_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/standard_margin">

        <ir.proglovving.cfviews.CfButton
            android:id="@+id/save_exam_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_exam"
            android:background="?attr/selectableItemBackground" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginHorizontal="@dimen/standard_margin_x"
            android:layout_marginVertical="@dimen/standard_margin"/>

        <ir.proglovving.cfviews.CfButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="?attr/selectableItemBackground" />

    </LinearLayout>



</LinearLayout>