<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".views.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ir.proglovving.percentage.custom_views.CusTextView
                        style="@style/AppTheme.MyNumberPickerTitlesStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/questions_number_colon" />

                    <ir.proglovving.percentage.custom_views.CusNumPicker
                        android:id="@+id/np_questions"
                        style="@style/MyNumberPickerTheme"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/number_picker_height"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/selector_round_number_picker_questions" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ir.proglovving.percentage.custom_views.CusTextView
                        style="@style/AppTheme.MyNumberPickerTitlesStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/right_answers_number_colon" />

                    <ir.proglovving.percentage.custom_views.CusNumPicker
                        android:id="@+id/np_rights"
                        style="@style/MyNumberPickerTheme"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/number_picker_height"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/selector_round_number_picker_rights" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ir.proglovving.percentage.custom_views.CusTextView
                        style="@style/AppTheme.MyNumberPickerTitlesStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wrong_answers_number_colon" />

                    <ir.proglovving.percentage.custom_views.CusNumPicker
                        android:id="@+id/np_wrongs"
                        style="@style/MyNumberPickerTheme"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/number_picker_height"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/selector_round_number_picker_wrongs" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/standard_margin_x"
                android:background="?android:listDivider" />

            <ir.proglovving.percentage.custom_views.CusButton
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_app_button"
                android:text="@string/calculate_points" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin_x"
                android:gravity="center"
                android:orientation="horizontal">

                <ir.proglovving.percentage.custom_views.CusTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/standard_margin_small"
                    android:layout_marginRight="@dimen/standard_margin_small"
                    android:text="@string/main_percent_colon"
                    android:textAlignment="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/normal_font_size" />

                <ir.proglovving.percentage.custom_views.CusTextView
                    android:id="@+id/tv_mainPercent"
                    style="@style/PercentTextViewsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin_x"
                android:gravity="center"
                android:orientation="horizontal">

                <ir.proglovving.percentage.custom_views.CusTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/standard_margin_small"
                    android:layout_marginRight="@dimen/standard_margin_small"
                    android:text="@string/percent_without_wrongs_colon"
                    android:textAlignment="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/normal_font_size" />

                <ir.proglovving.percentage.custom_views.CusTextView
                    android:id="@+id/tv_percentWithoutWrongs"
                    style="@style/PercentTextViewsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin_x"
                android:gravity="center"
                android:orientation="horizontal">

                <ir.proglovving.percentage.custom_views.CusTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/standard_margin_small"
                    android:layout_marginRight="@dimen/standard_margin_small"
                    android:text="@string/percent_if_wrongs_was_right_colon"
                    android:textAlignment="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/normal_font_size" />

                <ir.proglovving.percentage.custom_views.CusTextView
                    android:id="@+id/tv_percentIfWrongsWasRight"
                    style="@style/PercentTextViewsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>